hphp/test/zend/good/tests/classes/ctor_in_interface_03.php.expectf

Fatal error: Declaration of derived::__construct() must be compatible with that of constr::__construct() in %s/ctor_in_interface_03.php on line 11
